# justmars.github.io

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
about/: index.html
docs/: CNAME  about.md  index.md  projects.md
notes/: learningcsharp.md
overrides/: main.html
projects/: index.html
search/: search_index.json
